# web_clipper

./: .gitignore  AGENT_INSTRUCTION.md  LICENSE  README.md  build-linux.sh  build.py  pyproject.toml  test-value  web-clip-helper.spec  weibo_card_api.json
.github/workflows/: release.yml
.gsd/: PREFERENCES.md
docs/feedback/: 2026-05-12_131500.md  2026-05-12_195200.md
schemas/: clip-result.schema.json  error.schema.json  get-result.schema.json  list-result.schema.json  progress.schema.json  search-result.schema.json
scripts/: check_jsonl_purity.py  integration_report.json  integration_report.md  test_real_urls.py
src/web_clip_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_adapter.py  test_agent_commands.py  test_agent_discovery.py  test_agent_health.py  test_agent_instruction_audit.py  test_backup_cli.py  test_backup_service.py  test_clip_flags.py  test_clip_idempotent.py  test_clip_text.py  test_commands.py  test_config.py  test_config_cli.py  test_crash.py  test_delete_command.py  test_doc_import.py  test_doc_logging.py  test_dry_run.py  test_dynamic_flag.py  test_e2e_jsonl_purity.py  test_empty_results.py  test_error_codes.py  test_exit_codes.py  test_field_migration.py  test_get_content.py  test_images.py  test_import_command.py  test_import_service.py  test_index.py  test_io_guard.py  test_jsonl_linter.py  test_llm.py  test_llm_missing_warning.py  test_llm_prompts.py  test_logger.py  test_logger_integration.py  test_migration.py  test_output.py  test_pagination_metadata.py  (+20 more)
(+91 files in other folders)
