[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-clip-helper"
version = "0.3.0"
description = "LLM Agent-oriented web clipping CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "web-clip-helper contributors"}]
keywords = ["cli", "web-clipping", "markdown", "llm-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.11.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "platformdirs>=3.0",
    "agentsdk>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
web-clip-helper = "web_clip_helper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
